--- a/public/css/app.css
+++ b/public/css/app.css
@@ -566,6 +566,10 @@ body{
   margin-left: auto;
   margin-right: auto;
 }
+.mx-7{
+  margin-left: 1.75rem;
+  margin-right: 1.75rem;
+}
 .mt-10{
   margin-top: 2.5rem;
 }
@@ -599,6 +603,9 @@ body{
 .mb-1{
   margin-bottom: 0.25rem;
 }
+.-mt-4{
+  margin-top: -1rem;
+}
 .block{
   display: block;
 }
@@ -625,6 +632,9 @@ body{
 }
 .h-\[1px\]{
   height: 1px;
+}
+.h-\[260px\]{
+  height: 260px;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -758,6 +768,10 @@ body{
 .fill-current{
   fill: currentColor;
 }
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -801,6 +815,14 @@ body{
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
+}
+.py-9{
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .pr-4{
   padding-right: 1rem;
@@ -941,6 +963,11 @@ body{
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .outline-primary{
   outline-color: #0c7187;
 }
@@ -954,6 +981,12 @@ body{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+.duration-100{
+  transition-duration: 100ms;
+}
+.ease-in{
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .snap {
@@ -1097,6 +1130,18 @@ body{
       rgba(196, 196, 196, 0) 100%
     );
   }
+  
+  .hover\:scale-100:hover{
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+  
+  .hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
   
   .hover\:border-primary:hover{
   --tw-border-opacity: 1;
@@ -1252,6 +1297,10 @@ body{
 }
   
   @media (min-width: 720px){
+
+  .md\:w-1\/2{
+    width: 50%;
+  }
 
   .md\:p-\[70px\]{
     padding: 70px;
@@ -1416,6 +1465,10 @@ body{
 
   .xl\:w-5\/12{
     width: 41.666667%;
+  }
+
+  .xl\:w-1\/3{
+    width: 33.333333%;
   }
 
   .xl\:px-9{
