--- a/public/css/app.css
+++ b/public/css/app.css
@@ -537,6 +537,9 @@ body{
 .-bottom-7{
   bottom: -1.75rem;
 }
+.left-8{
+  left: 2rem;
+}
 .z-50{
   z-index: 50;
 }
@@ -545,6 +548,9 @@ body{
 }
 .z-\[-1\]{
   z-index: -1;
+}
+.z-20{
+  z-index: 20;
 }
 .-mx-4{
   margin-left: -1rem;
@@ -606,6 +612,12 @@ body{
 .ml-2{
   margin-left: 0.5rem;
 }
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+.mb-7{
+  margin-bottom: 1.75rem;
+}
 .block{
   display: block;
 }
@@ -621,6 +633,9 @@ body{
 .hidden{
   display: none;
 }
+.aspect-video{
+  aspect-ratio: 16 / 9;
+}
 .h-24{
   height: 6rem;
 }
@@ -635,6 +650,21 @@ body{
 }
 .h-\[1px\]{
   height: 1px;
+}
+.h-full{
+  height: 100%;
+}
+.h-20{
+  height: 5rem;
+}
+.h-screen{
+  height: 100vh;
+}
+.h-8{
+  height: 2rem;
+}
+.h-\[320px\]{
+  height: 320px;
 }
 .min-h-screen{
   min-height: 100vh;
@@ -657,6 +687,12 @@ body{
 .w-8{
   width: 2rem;
 }
+.w-20{
+  width: 5rem;
+}
+.w-11\/12{
+  width: 91.666667%;
+}
 .max-w-full{
   max-width: 100%;
 }
@@ -672,6 +708,27 @@ body{
 }
 .transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+@-webkit-keyframes ping{
+
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+@keyframes ping{
+
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+.animate-ping{
+  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+.cursor-pointer{
+  cursor: pointer;
 }
 .flex-wrap{
   flex-wrap: wrap;
@@ -765,12 +822,35 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 43 54 / var(--tw-bg-opacity));
+}
+.bg-opacity-0{
+  --tw-bg-opacity: 0;
+}
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
+}
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
+}
 .fill-current{
   fill: currentColor;
 }
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+.object-center{
+  -o-object-position: center;
+     object-position: center;
+}
+.p-3{
+  padding: 0.75rem;
+}
+.p-6{
+  padding: 1.5rem;
 }
 .py-2{
   padding-top: 0.5rem;
@@ -851,6 +931,9 @@ body{
 .pt-11{
   padding-top: 2.75rem;
 }
+.pb-16{
+  padding-bottom: 4rem;
+}
 .text-center{
   text-align: center;
 }
@@ -898,6 +981,9 @@ body{
 }
 .leading-tight{
   line-height: 1.25;
+}
+.leading-relaxed{
+  line-height: 1.625;
 }
 .text-\[\#0c7187\]{
   --tw-text-opacity: 1;
@@ -982,8 +1068,14 @@ body{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.delay-300{
+  transition-delay: 300ms;
+}
 .duration-100{
   transition-duration: 100ms;
+}
+.duration-1000{
+  transition-duration: 1000ms;
 }
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
@@ -1167,6 +1259,11 @@ body{
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
   
+  .hover\:bg-black:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 43 54 / var(--tw-bg-opacity));
+}
+  
   .hover\:bg-opacity-80:hover{
   --tw-bg-opacity: 0.8;
 }
@@ -1292,8 +1389,24 @@ body{
   
   @media (min-width: 720px){
 
+  .md\:h-\[70px\]{
+    height: 70px;
+  }
+
   .md\:w-1\/2{
     width: 50%;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .md\:w-\[70px\]{
+    width: 70px;
+  }
+
+  .md\:w-10\/12{
+    width: 83.333333%;
   }
 
   .md\:p-\[70px\]{
@@ -1465,6 +1578,14 @@ body{
     width: 41.666667%;
   }
 
+  .xl\:w-8\/12{
+    width: 66.666667%;
+  }
+
+  .xl\:p-7{
+    padding: 1.75rem;
+  }
+
   .xl\:px-9{
     padding-left: 2.25rem;
     padding-right: 2.25rem;
@@ -1476,5 +1597,12 @@ body{
 
   .xl\:text-\[42px\]{
     font-size: 42px;
+  }
+}
+  
+  @media (min-width: 1320px){
+
+  .\32xl\:p-9{
+    padding: 2.25rem;
   }
 }
