--- a/public/css/app.css
+++ b/public/css/app.css
@@ -636,6 +636,9 @@ body{
 .ml-2{
   margin-left: 0.5rem;
 }
+.mb-3{
+  margin-bottom: 0.75rem;
+}
 .block{
   display: block;
 }
@@ -647,6 +650,9 @@ body{
 }
 .inline-flex{
   display: inline-flex;
+}
+.table{
+  display: table;
 }
 .hidden{
   display: none;
@@ -816,6 +822,10 @@ body{
   --tw-border-opacity: 1;
   border-color: rgb(12 113 135 / var(--tw-border-opacity));
 }
+.border-red-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
 .border-amber-500{
   --tw-border-opacity: 1;
   border-color: rgb(245 158 11 / var(--tw-border-opacity));
@@ -823,10 +833,6 @@ body{
 .border-\[\#E5E5E5\]{
   --tw-border-opacity: 1;
   border-color: rgb(229 229 229 / var(--tw-border-opacity));
-}
-.border-red-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 .bg-red-700{
   --tw-bg-opacity: 1;
@@ -848,6 +854,10 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(99 115 129 / var(--tw-bg-opacity));
 }
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -859,10 +869,6 @@ body{
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-green-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 .bg-opacity-5{
   --tw-bg-opacity: 0.05;
@@ -1059,6 +1065,14 @@ body{
   --tw-text-opacity: 1;
   color: rgb(12 113 135 / var(--tw-text-opacity));
 }
+.text-gray-100{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(12 113 135 / var(--tw-text-opacity));
@@ -1078,14 +1092,6 @@ body{
 .text-amber-600{
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity));
-}
-.text-gray-100{
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .no-underline{
   -webkit-text-decoration-line: none;
@@ -1353,14 +1359,14 @@ body{
           text-decoration-line: underline;
 }
   
-  .focus\:border-primary:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(12 113 135 / var(--tw-border-opacity));
-}
-  
   .focus\:border-red-500:focus{
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
+  
+  .focus\:border-primary:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(12 113 135 / var(--tw-border-opacity));
 }
   
   .focus\:ring-2:focus{
@@ -1608,6 +1614,10 @@ body{
 
   .lg\:w-1\/12{
     width: 8.333333%;
+  }
+
+  .lg\:w-auto{
+    width: auto;
   }
 
   .lg\:max-w-full{
